--- a/custom-scorecard-tests/scorecard/patches/deploy-prereqs-stage0.yaml
+++ b/custom-scorecard-tests/scorecard/patches/deploy-prereqs-stage0.yaml
@@ -4,7 +4,7 @@
     entrypoint:
     - volsync-custom-scorecard-tests
     - deploy-prereqs
-    image: quay.io/backube/volsync-custom-scorecard-tests:release-0.9
+    image: quay.io/backube/volsync-custom-scorecard-tests:latest
     labels:
       suite: volsync-e2e
       test: deploy-prereqs
